--- a/open_hab.yml
+++ b/open_hab.yml
@@ -1,14 +1,24 @@
-#still to be updated
+version: '3'
 
-docker run \
-        --name openhab \
-        --net=host \
-        --tty \
-        -v /etc/localtime:/etc/localtime:ro \
-        -v /etc/timezone:/etc/timezone:ro \
-        -v openhab_addons:/openhab/addons \
-        -v openhab_conf:/openhab/conf \
-        -v openhab_userdata:/openhab/userdata \
-        -d \
-        --restart=always \
-        openhab/openhab:2.5.0.M1
+services:
+  OpenHAB:
+    image: openhab/openhab:2.5.0.M1
+    restart: always
+    container_name: "OpenHAB"
+    ports:
+
+    enviroment:
+
+    networks:
+
+    volumes:
+      - /home/dockers/openhab/addons:/openhab/addons 
+      - /home/dockers/openhab/conf:/openhab/conf 
+      - /home/dockers/openhab/userdata:/openhab/userdata
+      - /etc/localtime:/etc/localtime:ro 
+      - /etc/timezone:/etc/timezone:ro
+
+networks:
+  default:
+    external:
+      name: docker-network
