--- a/open_hab.yml
+++ b/open_hab.yml
@@ -10,6 +10,7 @@ services:
     enviroment:
 
     networks:
+      - default
 
     volumes:
       - /home/dockers/openhab/addons:/openhab/addons 
