--- a/monitorr.yml
+++ b/monitorr.yml
@@ -4,7 +4,7 @@ services:
   organizer:
     image: monitorr/monitorr
     restart: always
-    container_name: "monitorr
+    container_name: monitorr
     ports:
       - 9008:80
     environment:
