--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -6,7 +6,14 @@ services:
     restart: always
     container_name: "portainer-odin"
     networks:
-      - local
+      - default
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /opt/portainer/data:/data
+    ports:
+      - 9000:9000
+
+networks:
+  default:
+    external:
+      name: docker-network
