--- a/snipe_it/docker-compose.yml
+++ b/snipe_it/docker-compose.yml
@@ -1,51 +1,32 @@
-version: "3.5"
-
+version: "3"
 services:
-
- snipeit:
-    container_name: snipeit
+  mysql:
+    image: mysql:5
+    container_name: snipe_mysql
     restart: always
-    image: snipe/snipe-it:latest
     volumes:
-      - ./cert:/var/lib/snipeit/ssl
-      - ./script/init.sh:/usr/local/bin/init.sh
+      - /home/dockers/snipeit/mysql:/var/lib/mysql
     environment:
-      APP_ENV: "production"
-      APP_DEBUG: "false"
-      APP_KEY: "<<YOUR GENERATED KEY HERE>>"
-      APP_URL: "https://asset.technicalkiwi.com"
-      APP_TIMEZONE: "Pacific/Auckland"
-      APP_LOCALE: "en"
-      MYSQL_ROOT_PASSWORD: "Dino1"
-      MYSQL_DATABASE: "snipeit_app"
-      MYSQL_USER: "snipeit_user"
-      MYSQL_PASSWORD: "Snipe1t"
-      MYSQL_PORT_3306_TCP_ADDR: "mysql"
-      MAIL_PORT_587_TCP_ADDR: "<<FQDN OF YOUR MAIL SERVER>>"
-      MAIL_PORT_587_TCP_PORT: "587"
-      MAIL_ENV_FROM_ADDR: "alerts@technicalkiwi.com"
-      MAIL_ENV_FROM_NAME: "Snipe It Alerts"
-      MAIL_ENV_ENCRYPTION: "tls"
-      MAIL_ENV_USERNAME: "<<MAIL SERVER LOGIN>>"
-      MAIL_ENV_PASSWORD: "<<MAIL SERVER PASSWORD>>"
-    links:
-      - snipeit_db:mysql
-    ports:
-      - 9015:80
-      - 9016:443
-    command:
-      - init.sh
-
- snipeit_db:
-    container_name: snipeit_db
+      - MYSQL_ROOT_PASSWORD=Sn1pe1t
+      - MYSQL_USER=snipe_usr
+      - MYSQL_PASSWORD=Sn1pe1t
+      - MYSQL_DATABASE=snipe_it
+  snipeit:
+    image: linuxserver/snipe-it:latest
+    container_name: snipe-it
     restart: always
-    image: mysql:5.6
+    depends_on:
+      - mysql
     volumes:
-      - ./snipeit_db:/var/lib/mysql
+      - /home/dockers/snipeit/config:/config
     environment:
-       MYSQL_ROOT_PASSWORD: "Dino1"
-       MYSQL_DATABASE: "snipeit_app"
-       MYSQL_USER: "snipeit_user"
-       MYSQL_PASSWORD: "Snipe1t"
+      - APP_URL=192.168.1.202:9010
+      - MYSQL_PORT_3306_TCP_ADDR=mysql
+      - MYSQL_PORT_3306_TCP_PORT=3306
+      - MYSQL_DATABASE=snipe
+      - MYSQL_USER=snipe
+      - MYSQL_PASSWORD=Sn1pe1t
+      - PGID=1000
+      - PUID=1000
     ports:
-      - 3306:3306
+      - "9010:80"
