--- a/snipe_it/docker-compose.yml
+++ b/snipe_it/docker-compose.yml
@@ -11,6 +11,12 @@ services:
       - MYSQL_USER=snipe_usr
       - MYSQL_PASSWORD=Sn1pe1t
       - MYSQL_DATABASE=snipe_it
+    ports:
+      - 3306:3306
+    networks:
+      - default
+
+
   snipeit:
     image: linuxserver/snipe-it:latest
     container_name: snipe-it
@@ -20,14 +26,25 @@ services:
     volumes:
       - /home/dockers/snipeit/config:/config
     environment:
-      - APP_URL=192.168.1.202:9010
-      - MYSQL_PORT_3306_TCP_ADDR=localhost
+      - APP_URL=http://192.168.10.42:9010
+      - MYSQL_PORT_3306_TCP_ADDR=192.168.10.42
       - MYSQL_PORT_3306_TCP_PORT=3306
-      - MYSQL_DATABASE=snipe
-      - MYSQL_USER=snipe
+      - MYSQL_DATABASE=snipe_it
+      - MYSQL_USER=snipe_usr
       - MYSQL_PASSWORD=Sn1pe1t
       - PGID=1000
       - PUID=1000
-      - timezone=Pacific\Auckland
+      - APP_TIMEZONE=Pacific\Auckland
+      - APP_LOCALE=en
+      - MAIL_PORT_587_TCP_ADDR=mailsvr01.briscoes-nz.co.nz
+      - MAIL_ENV_FROM_ADDR=Assets@briscoes.co.nz
+      - MAIL_ENV_FROM_NAME=Asset_Management
     ports:
       - "9010:80"
+    networks:
+     - default
+
+networks:
+  default:
+    external:
+      name: docker-network
