--- a/snipe_it/docker-compose.yml
+++ b/snipe_it/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       - PUID=1000
       - APP_TIMEZONE=Pacific\Auckland
       - APP_LOCALE=en
-      - MAIL_PORT_587_TCP_ADDR=mailsvr01.briscoes-nz.co.nz
-      - MAIL_ENV_FROM_ADDR=Assets@briscoes.co.nz
+      - MAIL_PORT_587_TCP_ADDR=
+      - MAIL_ENV_FROM_ADDR=
       - MAIL_ENV_FROM_NAME=Asset_Management
     ports:
       - "9010:80"
