update port for DB

--- a/snipe_it/docker-compose.yml
+++ b/snipe_it/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     volumes:
       - /home/dockers/snipeit/config:/config
     environment:
-      - APP_URL=http://192.168.10.42:9010
-      - MYSQL_PORT_3306_TCP_ADDR=192.168.10.42
+      - APP_URL=https://asset.technicalkiwi.com
+      - MYSQL_PORT_3306_TCP_ADDR=192.168.1.202
       - MYSQL_PORT_3306_TCP_PORT=3306
       - MYSQL_DATABASE=snipe_it
       - MYSQL_USER=snipe_usr
@@ -37,7 +37,7 @@ services:
       - APP_TIMEZONE=Pacific\Auckland
       - APP_LOCALE=en
       - MAIL_PORT_587_TCP_ADDR=
-      - MAIL_ENV_FROM_ADDR=
+      - MAIL_ENV_FROM_ADDR=Assets@technicalkiwi.com
       - MAIL_ENV_FROM_NAME=Asset_Management
     ports:
       - "9010:80"
