--- a/Stacks/suite_crm/docker-compose.yml
+++ b/Stacks/suite_crm/docker-compose.yml
@@ -4,27 +4,31 @@ services:
     image: 'bitnami/mariadb:10.3'
     environment:
       - MARIADB_USER=bn_suitecrm
+      - MARIADB_PASSWORD=KiwiSCRM20
       - MARIADB_DATABASE=bitnami_suitecrm
       - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 3304:3306
     volumes:
-      - 'mariadb_data:/bitnami'
+      - ./mariadb:/bitnami
+
   suitecrm:
     image: 'bitnami/suitecrm:7'
     environment:
-      - MARIADB_HOST=mariadb
-      - MARIADB_PORT_NUMBER=3306
+      - MARIADB_HOST=192.168.1.202
+      - MARIADB_PORT_NUMBER=3304
       - SUITECRM_DATABASE_USER=bn_suitecrm
+      - SUITECRM_DATABASE_PASSWORD=KiwiSCRM20
       - SUITECRM_DATABASE_NAME=bitnami_suitecrm
       - ALLOW_EMPTY_PASSWORD=yes
+      - SUITECRM_USERNAME=tkiwi
+      - SUITECRM_PASSWORD=KiwiS20
+      - SUITECRM_EMAIL=aaron@technicalkiwi.com
+      - SUITECRM_HOST=192.168.1.202
     ports:
-      - '80:80'
-      - '443:443'
+      - '9017:80'
+      - '9018:443'
     volumes:
-      - 'suitecrm_data:/bitnami'
+      - ./data:/bitnami
     depends_on:
       - mariadb
-volumes:
-  mariadb_data:
-    driver: local
-  suitecrm_data:
-    driver: local
