update volume file path

--- a/self_contained/sismics/docker-compose.yml
+++ b/self_contained/sismics/docker-compose.yml
@@ -5,4 +5,4 @@ sismics:
     environment:
         - DOCS_BASE_URL='http://192.168.10.42:8100'
     volumes:
-        - sismics_docs_latest/data
+        - ./data:/data
