--- a/self_contained/jackett/docker-compose.yml
+++ b/self_contained/jackett/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   jackett:
     image: linuxserver/jackett
@@ -11,5 +11,12 @@ services:
       - ./config:/config
       - ./downloads:/downloads
     ports:
-      - 9100:9117
+      - 8001:9117
     restart: unless-stopped
+    networks:
+      - default
+
+networks:
+  default:
+    external:
+      name: docker-network
