--- a/external_database/Mysql/docker-compose.yml
+++ b/external_database/Mysql/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
 
-  maria-db:
-    image: Mysql
+  mysql:
+    image: mysql:5
     container_name: Mysql
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
@@ -12,8 +12,13 @@ services:
     restart: unless-stopped
     volumes:
       - ./mysql/:/var/lib/msql
-      - ./init:/docker-entrypoint-initdb.d
+      - ./init/:/docker-entrypoint-initdb.d
     ports:
-      - 3306:3306
+      - 3308:3306
     networks:
       - default
+
+networks:
+  default:
+    external:
+      name: docker-network
