--- a/external_database/bookstack/docker-compose.yml
+++ b/external_database/bookstack/docker-compose.yml
@@ -6,9 +6,9 @@
         environment:
           - PUID=1000
           - PGID=1000
-          - DB_HOST=192.168.10.42:3036
+          - DB_HOST=192.168.1.202:3038
           - DB_USER=bookstack
-          - DB_PASS=B00kstack
+          - DB_PASS=B00kStack
           - DB_DATABASE=Bookstackapp
         volumes:
           - ./config:/config
@@ -17,3 +17,8 @@
         restart: unless-stopped
         networks:
           - default
+
+networks:
+  default:
+    external:
+      name: docker-network
