--- a/self_contained/heimdall/docker-compose.yml
+++ b/self_contained/heimdall/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ Pacific/Auckland
+      - TZ=Pacific/Auckland
     networks:
       - default
     volumes:
