--- a/external_database/Snipe-IT/docker-compose.yml
+++ b/external_database/Snipe-IT/docker-compose.yml
@@ -6,22 +6,24 @@ services:
     restart: always
     volumes:
       - ./config:/config
+      - ./data:/var/lib/snipeit
     environment:
-      - APP_URL=https://asset.technicalkiwi.com
-      - MYSQL_PORT_3306_TCP_ADDR=192.168.10.42
+      #- APP_URL=https://asset.technicalkiwi.com
+      - APP_URL=http://192.168.1.202:9010
+      - MYSQL_PORT_3306_TCP_ADDR=192.168.1.202
       - MYSQL_PORT_3306_TCP_PORT=3306
       - MYSQL_DATABASE=SnipeIT
       - MYSQL_USER=snipe
       - MYSQL_PASSWORD=Sn1pe
       - PGID=1000
       - PUID=1000
-      - APP_TIMEZONE=Pacific\Auckland
+      - APP_TIMEZONE=Pacific/Auckland
       - APP_LOCALE=en
       - MAIL_PORT_587_TCP_ADDR=
       - MAIL_ENV_FROM_ADDR=
       - MAIL_ENV_FROM_NAME=Asset_Management
     ports:
-      - "8010:80"
+      - 9010:80
     networks:
      - default
 
