update storage location

--- a/self_contained/code-server/docker-compose.yml
+++ b/self_contained/code-server/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - SUDO_PASSWORD=Hello123 #optional
     volumes:
       - ./config:/config
+      - ./data:/app
     networks:
         - default
     ports:
