--- a/self_contained/Dashboards/homer/docker-compose.yml
+++ b/self_contained/Dashboards/homer/docker-compose.yml
@@ -7,12 +7,13 @@ services:
     ports:
       - 9020:8080
     enviroment:
-      -  
+
     networks:
       - default
     volumes:
       - ./config.yml:/www/config.yml
       - ./assets/:/www/assets
+      - ./ssl:/ssl
 
 networks:
   default:
