--- a/self_contained/Media/deluge/docker-compose.yml
+++ b/self_contained/Media/deluge/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: linuxserver/deluge
     container_name: deluge
     network_mode: host
+    ports:
+        - 8002:8112
     environment:
       - PUID=1000
       - PGID=1000
