--- a/external_database/WikiJS/.env
+++ b/external_database/WikiJS/.env
@@ -3,4 +3,4 @@ DB_HOST=localhost
 DB_USER=wikijs
 DB_PASS=W1kiJS
 DB_DATABASE=wikijs
-ROUTER_LABEL=traefik.http.routers.Homer.rule=Host(`wikijs.technicalkiwi.com`)
+ROUTER_LABEL=traefik.http.routers.Homer.rule=Host(`wiki.technicalkiwi.com`)
