--- a/self_contained/authentik/docker-compose.yml
+++ b/self_contained/authentik/docker-compose.yml
@@ -1,6 +1,6 @@
 ---
 version: '3.2'
-# Identity Provider
+
 services:
   postgresql:
     image: postgres:12-alpine
@@ -17,7 +17,7 @@ services:
     image: redis:alpine
     restart: unless-stopped
   server:
-    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2022.1.3}
+    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2022.4.1}
     restart: unless-stopped
     command: server
     environment:
@@ -38,7 +38,7 @@ services:
       - "0.0.0.0:${AUTHENTIK_PORT_HTTP:-9000}:9000"
       - "0.0.0.0:${AUTHENTIK_PORT_HTTPS:-9443}:9443"
   worker:
-    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2022.1.3}
+    image: ${AUTHENTIK_IMAGE:-ghcr.io/goauthentik/server}:${AUTHENTIK_TAG:-2022.4.1}
     restart: unless-stopped
     command: worker
     environment:
@@ -49,11 +49,10 @@ services:
       AUTHENTIK_POSTGRESQL__PASSWORD: ${PG_PASS}
       # AUTHENTIK_ERROR_REPORTING__ENABLED: "true"
     # This is optional, and can be removed. If you remove this, the following will happen
-    # - The permissions for the /backups and /media folders aren't fixed, so make sure they are 1000:1000
+    # - The permissions for the /media folders aren't fixed, so make sure they are 1000:1000
     # - The docker socket can't be accessed anymore
     user: root
     volumes:
-      - ./backups:/backups
       - ./media:/media
       - ./certs:/certs
       - /var/run/docker.sock:/var/run/docker.sock
