--- a/self_contained/keycloak/docker-compose.yml
+++ b/self_contained/keycloak/docker-compose.yml
@@ -1,15 +1,30 @@
-#Template for Docker Compose Version 3
-version: '3'
+version: '3.9'
 
 services:
-  Keycloak:
-    image: quay.io/keycloak/keycloak:13.0.1
-    restart: always
-    container_name: "Keycloak"
-    ports: 8080:8080
+  postgres:
+    image: postgres:13.2
+    restart: unless-stopped
     environment:
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=admin
+      POSTGRES_DB: ${POSTGRESQL_DB}
+      POSTGRES_USER: ${POSTGRESQL_USER}
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
+    networks:
+      - local-keycloak
+
+  keycloak:
+    depends_on:
+      - postgres
+    container_name: local_keycloak
+    environment:
+      DB_VENDOR: postgres
+      DB_ADDR: postgres
+      DB_DATABASE: ${POSTGRESQL_DB}
+      DB_USER: ${POSTGRESQL_USER}
+      DB_PASSWORD: ${POSTGRESQL_PASS}
+    image: jboss/keycloak:${KEYCLOAK_VERSION}
+    ports:
+      - "28080:8080"
+    restart: unless-stopped
     networks:
       - default
 #    volumes:
