--- a/stacks/monica_hq/docker-compose.yml
+++ b/stacks/monica_hq/docker-compose.yml
@@ -1,31 +1,41 @@
 version: "3.4"
 
 services:
-  monicahq:
-    build: .
-    image: monicahq/monicahq
+  app:
+    image: monica:apache
+    container_name: MonicaHQ
     depends_on:
-      - mysql
+      - db
+    networks:
+      - default
     ports:
-      - 80:80
-    env_file: .env
+      - 8083:80
+    environment:
+      - APP_KEY=xlhF31NeOlibJcoOW9tvZg7TkHcAZI3a
+      - DB_HOST=db
+      - DB_USERNAME=usermonica
+      - DB_PASSWORD=secret
     volumes:
-      - monica_data:/var/www/monica/storage
+      - ./data:/var/www/html/storage
     restart: always
 
-  mysql:
+  db:
     image: mysql:5.7
+    container_name: Monica-DB
     environment:
-      - MYSQL_ROOT_PASSWORD=sekret_root_password
+      - MYSQL_RANDOM_ROOT_PASSWORD=true
       - MYSQL_DATABASE=monica
-      - MYSQL_USER=homestead
+      - MYSQL_USER=usermonica
       - MYSQL_PASSWORD=secret
     volumes:
-      - monica_mysql:/var/lib/mysql
+      - mysql:/var/lib/mysql
     restart: always
 
 volumes:
-  monica_data:
-    name: monica_data
-  monica_mysql:
-    name: monica_mysql
+  mysql:
+    name: mysql
+
+networks:
+  default:
+    external:
+      name: docker-network
